--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -16,3 +16,12 @@
   min-height: 100vh;
   font-family: var(--font-family-main);
 }
+
+.content-page{
+  display: flex;
+}
+
+.page-wrapper{
+  flex-grow: 1;
+  padding: 20px;
+}
