--- a/src/widgets/Sidebar/ui/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar.module.scss
@@ -1,24 +1,24 @@
 .Sidebar {
-  height: calc(100vh - var(--navbar-height));
-  width: 300px;
-  position: relative;
-  background: var(--inverted-bg-color);
-  display: flex;
-  flex-direction: column;
-  padding: 20px;
-  transition: width .3s ease;
-
-  &.collapsed {
-    width: 80px;
+    height: calc(100vh - var(--navbar-height));
+    width: 300px;
+    position: relative;
+    background: var(--inverted-bg-color);
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
     transition: width .3s ease;
-  }
+
+    &.collapsed {
+        width: 80px;
+        transition: width .3s ease;
+    }
 }
 
 .switchers {
-  position: absolute;
-  bottom: 20px;
-  display: flex;
-  gap: 20px;
-  width: 100%;
-  left: 10
+    position: absolute;
+    bottom: 20px;
+    display: flex;
+    gap: 20px;
+    width: 100%;
+    left: 10px;
 }
