--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,6 +1,6 @@
-@import "styles/variables/global";
-@import "styles/themes/dark";
-@import "styles/themes/light";
+@import "variables/global";
+@import "themes/dark";
+@import "themes/light";
 
 * {
     margin: 0;
